# dbcalm-open-backend

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  RELEASING.md  backrest-cmd.py  build-deb.sh  build-rpm.Dockerfile  build-rpm.sh  build.Dockerfile  client_test.py  cmd-client.py  dbcalm-api.py  dbcalm-cmd-server.py  dbcalm-cmd.py  dbcalm-mariadb-cmd.py  dbcalm-users.py  dbcalm.py  dev-install.sh  dev-run-cmd.sh  main.py  mariadb-cmd.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  e2e-tests-mariadb-deb.yml  e2e-tests-mariadb-rpm.yml  e2e-tests-mysql-deb.yml  e2e-tests-mysql-rpm.yml  e2e-tests-rpm.yml  e2e-tests.yml  release.yml
adapter/: adapter.py  context.py  mariadb.py
backrest/: main.py  pyproject.toml
backrest/adapter/: adapter.py  adapter_factory.py  mariadb.py  mariadb_factory.py
backrest/auth/: verify_token.py
backrest/builder/: list_builder.py  mariadb_backup_cmd_builder.py  mariadb_backup_cmd_builder_factory.py
backrest/command/: runner.py  runner_factory.py
backrest/config/: config.py  config_factory.py  validator.py  yaml_config.py
backrest/handler/: handler.py  process_queue_handler.py
backrest/logger/: file_logger.py  logger_factory.py
backrest/routes/: authorize.py  create_backups.py  create_client.py  delete_client.py  list_backups.py  list_clients.py  restore.py  status.py  token.py  update_client.py
backrest/str/: kebab.py
backrest/test/: server.crt  server.key  server.py  testclient.py  testserver.py
backrest_client/: client.py
backrest_cmd/: mariadb-cmd.py  pyproject.toml
backrest_cmd/adapter/: adapter.py  adapter_factory.py  mariadb.py  mariadb_factory.py
backrest_cmd/builder/: backup_cmd_builder.py  mariadb_backup_cmd_builder.py  mariadb_backup_cmd_builder_factory.py  restore_cmd_builder.py
backrest_cmd/command/: runner.py  runner_factory.py  validator.py
backrest_cmd/process/: runner.py  runner_factory.py
config/: config.py
dbcalm/auth/: verify_token.py
dbcalm/cli/: __init__.py  api_client_helper.py  backup.py  cleanup.py  clients.py  server.py  users.py
dbcalm/config/: config.py  config_factory.py  validator.py  (+1 more)
dbcalm_cmd_client/: client.py
dbcalm_mariadb_cmd_client/: client.py
dev/: .env.example  Makefile  create_user.py  install-services.sh  install.sh  start_all.py  start_both.py
docs/: development.md
hooks/: pre-commit
templates/: backrest-cmd.service  backrest-mariadb-cmd.service  config.yml  credentials.cnf  dbcalm-mariadb-cmd.service
test/: client.crt  client.key  client.py  server.py
(+188 files in other folders)
