[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="dbcalm"
version="0.0.1"
license = {text = "BUSL-1.1"}
requires-python = ">= 3.11"
dependencies = [
    "fastapi[standard]",
    "peewee",
    "pyinstaller",
    "uvicorn",
    "PyJWT",
    "bcrypt==4.0.1",
    "passlib[bcrypt]",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff",
    "debugpy",
]
e2e = [
    "pytest>=8.0.0",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
]

[tool.setuptools.packages.find]
include = ["dbcalm_cmd*", "dbcalm_mariadb_cmd*", "dbcalm*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D",  "TD", "BLE", "T201", "FA100", "S101", "A001", "A002"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
cache_dir = "/tmp/.pytest_cache"
filterwarnings = [
    "ignore::urllib3.exceptions.InsecureRequestWarning",
]